footer indetification in index.html and styled it in main.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,6 +34,10 @@
     font-weight: bold;
     color: black;
 }
+.footer-one{
+    margin-left: 50px;
+    color: slateblue;
+}
 /*styling of table*/
 .table-data{
     margin: 50px;
